Switched to options from .canAccess to avoid java9 issue except Optional usage required java9... ifPresentOrElse

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     multipart:
       max-file-size: 12Mb
       max-request-size: 12Mb
+      
+logging.level:
+  com.lesuorac: DEBUG 
+      
 bsa:
   views:
     MoneyView.csv:
